--- a/contact/formpage.html
+++ b/contact/formpage.html
@@ -15,7 +15,8 @@
         <div class="container">
             <div class="imagebg"></div>
             <div class="container">
-                <div class="form-container z-depth-5">
+                <div class="form-container z-depth-5" action=
+                   "handler.php">
                     <h3>Contact Form</h3> 
                     <div class="row">
                         <form class="col s12" id="reused_form">
