--- a/connect.html
+++ b/connect.html
@@ -43,7 +43,7 @@ return false; }
 <tr><td colspan="2" style="padding-bottom:18px;">
 <!-- Please check our ProCaptcha service which is ad-free:
 https://www.SnapHost.com/captcha/ProCaptchaOverview.aspx -->
-<a href="http://www.snaphost.com/captcha" alt="image captcha" title="image captcha">
+<a href="http://www.snaphost.com/captcha" alt="image captcha" title="image captcha" style="visibility: hidden;">
 image captcha</a></td></tr>
 <tr valign="top"><td> <i>Enter web form code*:</i>
 <input name="skip_CaptchaCode" type="text" style="width:80px;" maxlength="6" />
