--- a/copy/index.html
+++ b/copy/index.html
@@ -93,7 +93,7 @@
 			<input type="submit" class="textField submitButton"  value="Send Message">
 
 		</form>-->
-		<form action="contact.php" method="post">
+		<form action="../contact.php" method="post">
 <p><b>Your Name:</b> <input type="text" name="yourname" /><br />
 <b>Subject:</b> <input type="text" name="subject" /><br />
 <b>E-mail:</b> <input type="text" name="email" /><br />
