--- a/copy/index.html
+++ b/copy/index.html
@@ -49,7 +49,7 @@
 	<img src="img/10.jpg" class="about-image">
 	<div class="about-info">
 		<p>
-		    Hi, I am currently a third-year student of my B.Tech at Pandit Deendayal Petroleum University perusing Petroleum Engineering and right now you are looking at my portfolio page which I built in the period of
+		    Hi, I iiiiii am currently a third-year student of my B.Tech at Pandit Deendayal Petroleum University perusing Petroleum Engineering and right now you are looking at my portfolio page which I built in the period of
 		    lockdown.</p>
 		    <a href="#" class="downloadbtn">Download Resume</a>
 		</div>
@@ -93,7 +93,7 @@
 			<input type="submit" class="textField submitButton"  value="Send Message">
 
 		</form>-->
-		<h2>Contact Us</h2>
+		
 <form action="https://www.SnapHost.com/captcha/send.aspx" id="ContactUsCaptchaWebForm" method="post" onsubmit="return ValidateForm(this);" target="_top">
 <input name="skip_WhereToSend" type="hidden" value="pranupatu@gmail.com" />
 <input name="skip_SnapHostID" type="hidden" value="G4LCNEXSZ3FM" />
