--- a/copy/thanks.htm
+++ b/copy/thanks.htm
@@ -8,5 +8,7 @@
 Thank you for contacting us, we will reply
 to your inquiry as soon as possible!</p>
 
+<button href="https://pranaywebsite.github.io/sample/copy/index.html"><h3>Vsit the home page again</h3></button>
+ 
 </body>
 </html>
