--- a/copy/thanks.htm
+++ b/copy/thanks.htm
@@ -8,7 +8,7 @@
 Thank you for contacting us, we will reply
 to your inquiry as soon as possible!</p>
 
-<button><a href="https://pranaywebsite.github.io/sample/copy/index.html"><h3>Vsit the home page again</h3></a></button>
+<button><a href="index.html"><h3>Vsit the home page again</h3></a></button>
  
 </body>
 </html>
