--- a/copy/index.html
+++ b/copy/index.html
@@ -97,7 +97,7 @@
 <form action="https://www.SnapHost.com/captcha/send.aspx" id="ContactUsCaptchaWebForm" method="post" onsubmit="return ValidateForm(this);" target="_top">
 <input name="skip_WhereToSend" type="hidden" value="pranupatu@gmail.com" />
 <input name="skip_SnapHostID" type="hidden" value="G4LCNEXSZ3FM" />
-<input name="skip_WhereToReturn" type="hidden" value="https://pranaywebsite.github.io/sample/copy/index.html" />
+<input name="skip_WhereToReturn" type="hidden" value="https://pranaywebsite.github.io/sample/copy/thanks.htm" />
 <input name="skip_Subject" type="hidden" value="Contact Us Form" />
 <input name="skip_ShowUsersIp" type="hidden" value="1" />
 <input name="skip_SendCopyToUser" type="hidden" value="1" />
