--- a/copy/index.html
+++ b/copy/index.html
@@ -60,7 +60,7 @@
 
 
 
-<!--work section--->
+<!----------------------------work section------------------->
 <section id="work" class="work">
 	<div class="section-title">
 	<h2>Work</h2>
@@ -82,16 +82,16 @@
 
 
 
-<!--contact section--->
+<!---------------------contact section----------------------->
 <section id="contact" class="contact">
 	<div class="section-title">
 		<h2>Contact</h2>
 	</div>
-	<div class="contact-info">
+	
 		
 		
 		
-<form action="https://www.SnapHost.com/captcha/send.aspx" id="ContactUsCaptchaWebForm" method="post" onsubmit="return ValidateForm(this);" target="_top">
+<form action="https://www.SnapHost.com/captcha/send.aspx" id="ContactUsCaptchaWebForm" method="post" onsubmit="return ValidateForm(this);" target="_top" class="cform">
 
 <input name="skip_WhereToSend" type="hidden" value="pranupatu@gmail.com" />
 
@@ -125,19 +125,18 @@ return false; }
 
 </script>
 
-<table border="0" cellpadding="5" cellspacing="0" width="600">
 
 
-<input name="Name" type="text" maxlength="60" placeholder="Full Name"  />
+<input name="Name"  class="text-size" type="text" maxlength="60" placeholder="Full Name"  />
 
 
-<input name="PhoneNumber" type="text" maxlength="43" placeholder="Phone Number"  />
+<input name="PhoneNumber"  class="text-size" type="text" maxlength="43" placeholder="Phone Number"  />
 
 
-<input name="FromEmailAddress" type="text" maxlength="60" placeholder="Email Address" />
+<input name="FromEmailAddress"  class="text-size" type="text" maxlength="60" placeholder="Email Address" />
 
 
-<textarea name="Comments" rows="7" cols="40" placeholder="Fill us in on any more details here..." ></textarea>
+<textarea name="Comments" rows="7" class="text-size"  cols="40" placeholder="Fill us in on any more details here..." ></textarea>
 
 
 <!---------------------don't touch this---------------->
@@ -152,14 +151,14 @@ image captcha</a>
 style="align-items: center; justify-content: center; margin: .4rem auto  2rem 3rem;"
 src="https://www.SnapHost.com/captcha/CaptchaImage.aspx?id=G4LCNEXSZ3FM&ImgType=2" /></a><br />
 
-<input name="skip_CaptchaCode" type="text" style="width:90px; " placeholder="Enter Captcha" maxlength="6" />
+<input name="skip_CaptchaCode" type="text" style="width:30%; " class="text-size" placeholder="Enter Captcha" maxlength="6" />
 
 
-<a href="#" onclick="return ReloadCaptchaImage('CaptchaImage');" style="text-decoration: none;" type="getElementById" id="reload"><span style="font-size:.8rem; ">reload image</span></a> </td>
+<a href="#" onclick="return ReloadCaptchaImage('CaptchaImage');" class="text-size" style="text-decoration: none;" type="getElementById" id="reload"><span>Reload Image</span></a> </td>
 <br />
 
 
-<input name="skip_Submit" type="submit" value="Submit" />
+<input name="skip_Submit" class="text-size" type="submit" value="Submit" />
 
 </form>
 	 
@@ -189,8 +188,8 @@ src="https://www.SnapHost.com/captcha/CaptchaImage.aspx?id=G4LCNEXSZ3FM&ImgType=
 	    </p>
 	</div> 
 
-
 </section>
+
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="main.js"></script>
 <!--round scroll--><script type="text/javascript" src="round.js"></script>
