--- a/3/bignav.html
+++ b/3/bignav.html
@@ -260,7 +260,7 @@
 
 <input name="skip_SnapHostID" type="hidden" value="G4LCNEXSZ3FM" />
 
-<input name="skip_WhereToReturn" type="hidden" value="https://github.com/pranaywebsite/sample/3/contactthanks.html" />
+<input name="skip_WhereToReturn" type="hidden" value="https://pranaywebsite.github.io/sample/3/contactthanks.html" />
 
 <input name="skip_Subject" type="hidden" value="Thank You Visiting My Website" />
 <input name="skip_ShowUsersIp" type="hidden" value="1" />
