--- a/5/bignav.html
+++ b/5/bignav.html
@@ -290,7 +290,7 @@ id="toggle">More</button> </div>
 
 <input name="skip_SnapHostID" type="hidden" value="G4LCNEXSZ3FM" />
 
-<input name="skip_WhereToReturn" type="hidden" value="https://github.com/pranaywebsite/sample/5/contactthanks.html" />
+<input name="skip_WhereToReturn" type="hidden" value="https://pranaywebsite.github.io/sample/5/contactthanks.html" />
 
 <input name="skip_Subject" type="hidden" value="Thank You Visiting My Website" />
 <input name="skip_ShowUsersIp" type="hidden" value="1" />
