--- a/5/contactthanks.html
+++ b/5/contactthanks.html
@@ -270,7 +270,7 @@ div.backBtn:hover span.bLine {
   </div><div class="backBtn">
       <span class="line tLine"></span>
       <span class="line mLine"></span>
-      <a href="https://github.com/pranaywebsite/sample/5/bignav.html" style="color: #fff;"><span class="label">Back to Portfolio</span></a>
+      <a href="https://pranaywebsite.github.io/sample/5/bignav.html" style="color: #fff;"><span class="label">Back to Portfolio</span></a>
       <span class="line bLine"></span>
 	</div>
 
