--- a/6/bignav.html
+++ b/6/bignav.html
@@ -84,7 +84,7 @@
 <section id="backtype">
 	<div>
 	   <h1><span style="color: #ffe">I'M</span> <span class="typed-text"></span><span class="cursor">&nbsp</span></h1>
-       <p class="sub-cursor" ><h5>I am all that is, has been and ever can be having an experiance called Pranay Patel.</h5></p>
+       <p class="sub-cursor" ><h5>I am all that is, has been and ever can be having an experience called Pranay Patel.</h5></p>
        <ul class="list-unstyled  list-social ">
                 <li class="icons"><a href="https://www.linkedin.com/in/pranay-patel-374257148"target="_blank"><i class="fab fa-linkedin icon-col icon-col" aria-hidden="true"></i></a></li>
                 <li class="icons"><a  href="mailto:pranay.pbt17@spt.pdpu.ac.in" target="_blank"><i class="far fa-envelope icon-col" aria-hidden="true"></i></a>
@@ -138,27 +138,27 @@
   <div class="card-carousel ">
     <div class="card" id="s1">
       <i class="far fa-file-excel fa-3x" style="color: #fff;"></i>
-        <p>Advanced in MS Excel including PivotTables, VLOOKUP, INDEX/MATCH, and Data Tables.</p>
+        <p>Advanced in MS Excel including PivotTables, VLOOKUP, INDEX/ MATCH, and Data Tables</p>
     </div>
     <div class="card" id="s2">
       <i class="fas fa-user-tie"style="color: #fff;"></i>
-            <p class="separator">Active listening<br>
-Public speaking<br>
+            <p class="separator">Active Listening<br>
+Public Speaking<br>
 Leadership Skills<br>
 Management Skills<br>
-Problem-solving skills<br></p>
+Problem-solving Skills<br></p>
     </div>
     <div class="card" id="s3">
      <i class="fas fa-laptop-code fa-3x" style="color: #fff;"></i><br>
-      <p>Well versed with computer languages like Python, Java, R, HTML5 & CSS.</p>
+      <p>Well versed with computer languages like Python, Java, R, HTML5 & CSS</p>
     </div>  
     <div class="card" id="s4">
       <i class="fas fa-certificate fa-3x" style="color: #fff;"></i><br>
-      <p>Completed certified courses on Data Science by Harvard from DataCamp & EDX.org.</p>
+      <p>Completed certified courses on Data Science by Harvard from DataCamp & EDX.org</p>
     </div>
     <div class="card" id="s5">
       <i class="fas fa-chart-line fa-3x" style="color: #fff;" ></i><br>
-      <p>Basic knowledge of Matlab, CMG software and Data Analysis using R.</p>
+      <p>Basic knowledge of Matlab, CMG software and Data Analysis using R</p>
     </div>
 
 </div>
@@ -214,7 +214,7 @@ Problem-solving skills<br></p>
                                     Ahmedabad, Gujarat.
                                 </h4>
                                 <p class="">
-                                     1. Worked on Automation of the CGD sector espicially on the domestic consumer side.<br>
+                                     1. Worked on Automation of the CGD sector especially on the domestic consumer side.<br>
                                     2. Also got to learn about Integrity Management System.
                                 </p>
                             </div>
@@ -253,7 +253,7 @@ Problem-solving skills<br></p>
                                   Oil and Natural Gas Coporation Ltd. Ahmedabad.                                  
                                 </h4>
                                 <p class="">
-                                    1. Worked Group Gathering Station in Motera, Ahmedabad.<br>
+                                    1. Worked at Group Gathering Station in Motera, Ahmedabad.<br>
                                     2. Learnt about SCADA, oil and gas production, storage and transportation systems.
                                 </p>
                             </div>
@@ -272,7 +272,7 @@ Problem-solving skills<br></p>
                         <div class="card" id="three" >
                             <div class="card-content">
                                 <h4 class="card-title">
-                                    Khmair NGO, Kutch.                                
+                                    Khamir NGO, Kutch.                                
                                 </h4>
                                 <p class="">
                                     1. Worked with the copper bell makers in the villages near Bhuj taluka.
@@ -316,7 +316,7 @@ id="toggle">More</button> </div>
 
 <input name="skip_WhereToReturn" type="hidden" value="https://pranaywebsite.github.io/sample/6/contactthanks.html" />
 
-<input name="skip_Subject" type="hidden" value="Thank You Visiting My Website" />
+<input name="skip_Subject" type="hidden" value="Thank you for visiting my website." />
 <input name="skip_ShowUsersIp" type="hidden" value="1" />
 <input name="skip_SendCopyToUser" type="hidden" value="1" />
 
@@ -370,7 +370,7 @@ src="https://www.SnapHost.com/captcha/CaptchaImage.aspx?id=G4LCNEXSZ3FM&ImgType=
 
 
 <div class="cent">
-<input name="skip_CaptchaCode" type="text" style="width: 70%; max-width: 10rem;"   class="captcha-size" placeholder="Enter Captcha" maxlength="6" />
+<input name="skip_CaptchaCode" type="text" style="width: 70%; max-width: 10.6rem;"   class="captcha-size" placeholder="Enter Captcha" maxlength="6" />
 
 
 <a href="#" onclick="return ReloadCaptchaImage('CaptchaImage');"  style="text-decoration: none; " type="getElementById" id="reload"><span class="text-size" 
