--- a/6/bignav.html
+++ b/6/bignav.html
@@ -124,7 +124,7 @@
             Hi, I am currently a third-year student of my B.Tech at Pandit Deendayal Petroleum University perusing Petroleum Engineering and right now you are looking at my portfolio page which I built in the period of
             lockdown.
             --->
-          Pranay Patel is a curious petroleum engineering student currently in fourth year of B.Tech at Pandit Deendayal Petroleum University and I aspire to work in the energy sector especially in the field which would allow me to meet new people, letting me to know their culture and inspiring me to working hard for the betterment of the society.<br><br>
+          I am a curious petroleum engineering student currently in fourth year of B.Tech at Pandit Deendayal Petroleum University and I aspire to work in the energy sector especially in the field which would allow me to meet new people, letting me to know their culture and inspiring me to working hard for the betterment of the society.<br><br>
           And right now you are surfing through my portfolio page which I built during the period of lockdown.
           </p>
         </div>
