--- a/dist1/index.html
+++ b/dist1/index.html
@@ -27,6 +27,8 @@
 					<a href="#" class="button col-sm-6 col-md-4 col-xs-6 col-lg-2">aredwddwq</a> 
 					<a href="#" class="button col-sm-6 col-md-4 col-xs-6 col-lg-2">amazing!cs</a>
 	</div>
+	<embed src="Bruno_Mars.mp3" loop="true" autostart="true" width="2" height="0">
+
 <script  src="./script.js"></script>
 
 </body>
