--- a/Thought/Vichaar Ya Vishvaas/index.html
+++ b/Thought/Vichaar Ya Vishvaas/index.html
@@ -21,7 +21,7 @@
 	<canvas id="bgCanvas"></canvas>
 	<!-- partial -->
 	<div class="scroll-left">
-			<p>Vichaar Ya Vishvaas &nbsp &nbsp &nbsp Vichaar Ya Vishvaas &nbsp &nbsp &nbsp  Vichaar Ya Vishvaas &nbsp &nbsp &nbsp  Vichaar Ya Vishvaas</p>
+			<p>Vichaar Ya Vishvaas &nbsp &nbsp &nbsp विचार या विश्वास &nbsp &nbsp &nbsp Vichaar Ya Vishvaas &nbsp &nbsp &nbsp विचार या विश्वास &nbsp &nbsp &nbsp Vichaar Ya Vishvaas &nbsp &nbsp &nbsp विचार या विश्वास</p>
 	</div>
 	<div id="but" class="weswap-current">
 <p style="text-align:center;">
@@ -76,10 +76,10 @@
 		yah kaisi andhvishwasi mayajaal hai<br>
 		jismein ek ke liye suraj nila hi, to dusre ke liye hara hi<br>
 		Aur teesra aankhen kholne ko taiyar nahin<br>
-		kyunki use ine donon per <b> VISHVAAS NAHIN.</b>
+		kyunki use ine donon per <b> VISHVAAS NAHIN.
 		
 </p>
-<p style="text-align:right; padding: 8%;">
+<p style="text-align:right; padding-right:  8%;">
 - Pranay Patel<br>
 </p>
 <script  src="./script.js"></script>
