--- a/sample/index.html
+++ b/sample/index.html
@@ -33,7 +33,7 @@
        </div>
 
      </div>
-     <div id="eee" class=" weswap-current" >
+     <div id="eee" >
 
       <button class="map-point-sm en eng button" id="en" data-show=".english">
         <div class="content">
