--- a/sample/index.html
+++ b/sample/index.html
@@ -19,21 +19,14 @@
 
         </head>
         <body>
+          <div class="flex-contianer">
           <div class="aud">
            <audio src="Pranay_Creativity.mp3"  loop="TRUE"></audio>
            <button id="butto" class="butto">
             <i class="fa fa-volume-up " aria-hidden="true"></i>
           </button>
         </div>
-        <!-- partial:index.partial.html -->
-        <canvas id="bgCanvas"></canvas>
-        <!-- partial -->
-        <div class="scroll-left">
-         <p>Vichaar Ya Vishvaas &nbsp &nbsp &nbsp विचार या विश्वास &nbsp &nbsp &nbsp Vichaar Ya Vishvaas &nbsp &nbsp &nbsp विचार या विश्वास &nbsp &nbsp &nbsp Vichaar Ya Vishvaas &nbsp &nbsp &nbsp विचार या विश्वास</p>
-       </div>
-
-     </div>
-     <div id="eee" >
+           <div id="eee" style="margin-top: 3vh;" >
 
       <button class="map-point-sm en eng button" id="en" data-show=".english">
         <div class="content">
@@ -51,7 +44,16 @@
       </button>
 
     </div><!-- end inner basic -->
+</div>
+        <!-- partial:index.partial.html -->
+        <canvas id="bgCanvas"></canvas>
+        <!-- partial -->
+        <div class="scroll-left">
+         <p>Vichaar Ya Vishvaas &nbsp &nbsp &nbsp विचार या विश्वास &nbsp &nbsp &nbsp Vichaar Ya Vishvaas &nbsp &nbsp &nbsp विचार या विश्वास &nbsp &nbsp &nbsp Vichaar Ya Vishvaas &nbsp &nbsp &nbsp विचार या विश्वास</p>
+       </div>
 
+     </div>
+  
     <div>
 
       <div class="initialmsg">
