--- a/Thought/Vichaar Ya Vishvaas/index.html
+++ b/Thought/Vichaar Ya Vishvaas/index.html
@@ -27,7 +27,7 @@
       <!-- /PRELOADER -->
           <div class="flex-contianer">
           <div class="aud">
-           <audio src="../Pranay_Creativity.mp3" id="aud" loop="TRUE"></audio>
+           <audio src="../eng.mp3" id="aud" loop="TRUE"></audio>
            <button id="butto" class="butto">
             <i class="fa fa-volume-up " aria-hidden="true"></i>
           </button>
