--- a/Thought/Vichaar Ya Vishvaas/index.html
+++ b/Thought/Vichaar Ya Vishvaas/index.html
@@ -74,7 +74,7 @@
             Sau chuhe to humne bhi mare,<br>
             namak dalkar bhi humne khae par<br>
             jab haj per pahunche tab pata Chala<br>
-            ki vah sab to viarth tha.<br>
+            ki vah sab to vyarth tha.<br>
           </p>
           <p style="text-align:center;">
             Dharm aur Bhakt ki kya yah dosti badi aanokhi hai<br>
@@ -139,7 +139,7 @@
           Sau chuhe to humne bhi mare,<br>
           namak dalkar bhi humne khae par<br>
           jab haj per pahunche tab pata Chala<br>
-          ki vah sab to viarth tha.<br>
+          ki vah sab to vyarth tha.<br>
         </p>
         <p style="text-align:center;">
           Dharm aur Bhakt ki kya yah dosti badi aanokhi hai<br>
