--- a/w/index.html
+++ b/w/index.html
@@ -21,10 +21,10 @@
 <head>
 <title>pranvvewsvwvcewvweay</title>
 <meta data-n-head="ssr" name="viewport" content="width=device-width,initial-scale=1">
-<link rel="preload" href="_nuxt/961b6a2f00ad6dd3155d.js" as="script">
-<link rel="preload" href="_nuxt/a9e70e92a34f5c583d40.js" as="script">
-<link rel="preload" href="_nuxt/2a9cd599e1f802df8d6c.js" as="script">
-<link rel="preload" href="_nuxt/f14fbd81b751fdaeb47e.js" as="script">
+<link rel="preload" href="_nuxt/script1.js" as="script">
+<link rel="preload" href="_nuxt/script2.js" as="script">
+<link rel="preload" href="_nuxt/script3.js" as="script">
+<link rel="preload" href="_nuxt/script4.js" as="script">
 <link rel="preload" href="_nuxt/bede10f736311080bfe8.js" as="script">
 <style>
 	@media (min-width:1025px){::-webkit-scrollbar{display:none;width:6px}::-webkit-scrollbar-track{background-color:transparent}::-webkit-scrollbar-thumb{background:#96442e;background:var(--brand-color)}::-webkit-scrollbar-thumb:hover{background:#d8d8d8;background:var(--main-color)}}
@@ -620,11 +620,10 @@ html{scrollbar-width:none;-ms-overflow-style:none}.loader{position:fixed;z-index
 
 </div>
 <div data-server-rendered="true" id="__nuxt"><!----><div class="loader"><div class="bgColor"></div> <div class="words"></div></div> 
-<script src="_nuxt/961b6a2f00ad6dd3155d.js" defer></script>
-<script src="_nuxt/bede10f736311080bfe8.js" defer></script>
-<script src="_nuxt/a9e70e92a34f5c583d40.js" defer></script>
-<script src="_nuxt/2a9cd599e1f802df8d6c.js" defer></script>
-<script src="_nuxt/f14fbd81b751fdaeb47e.js" defer></script>
+<script src="_nuxt/script1.js" defer></script>
+<script src="_nuxt/script2.js" defer></script>
+<script src="_nuxt/script3.js" defer></script>
+<script src="_nuxt/script4.js" defer></script>
 <script type="text/javascript">
 	
   //----------------------Audio-------------//
