--- a/w/index.html
+++ b/w/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" >
         <head>
           <meta charset="UTF-8">
@@ -23,360 +23,14 @@
 <meta data-n-head="ssr" name="viewport" content="width=device-width,initial-scale=1">
 <style>
 	@media (min-width:1025px){::-webkit-scrollbar{display:none;width:6px}::-webkit-scrollbar-track{background-color:transparent}::-webkit-scrollbar-thumb{background:#96442e;background:var(--brand-color)}::-webkit-scrollbar-thumb:hover{background:#d8d8d8;background:var(--main-color)}}
-html{scrollbar-width:none;-ms-overflow-style:none}.loader{position:fixed;z-index:9001}.bgColor,.loader{top:0;left:0;width:100%;height:100%}.bgColor{background-color:#000}.bgColor,.words{position:absolute}.words{top:0;left:0;right:0;bottom:0}}
+html{scrollbar-width:none;-ms-overflow-style:none}.loader{position:fixed;z-index:9001}.bgColor,.loader{top:0;left:0;width:100%;height:100%}.bgColor{background-color:#000}.bgColor,.words{position:absolute}.words{top:0;left:0;right:0;bottom:0}
 
-  body, html {
-    background-color: #000;
-    color: #fff;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-  }
-  canvas {
-    position:absolute;
-    top:0;
-    left:0;
-    z-index: 9;
-  }
-
-  .scroll-left {
-    overflow: hidden;
-    height: 20vh; 
-    position: relative;
-    color: #fff;
-    width:40%;
-    left: 30%;
-    top: -8vh;
-    font-size: 3.5rem;
-    z-index: 99999;
-  }
-  .scroll-left p {
-    position: relative;
-    white-space:nowrap;
-
-    text-align: left;
-    /* Apply animation to this element */ 
-    -moz-animation: scroll-left 50s linear infinite;
-    -webkit-animation: scroll-left 50s linear infinite;
-    animation: scroll-left 50s linear infinite;
-  }
-  /* Move it (define the animation) */
-  @-moz-keyframes scroll-left {
-    0%   { -moz-transform: translateX(100%); }
-    100% { -moz-transform: translateX(-100%); }
-  }
-  @-webkit-keyframes scroll-left {
-    0%   { -webkit-transform: translateX(100%); }
-    100% { -webkit-transform: translateX(-100%); }
-  }
-  @keyframes scroll-left {
-    0%   { 
-      -moz-transform: translateX(100%); /* Browser bug fix */
-      -webkit-transform: translateX(100%); /* Browser bug fix */
-      transform: translateX(200px);         
-    }
-    100% { 
-      -moz-transform: translateX(-100%); /* Browser bug fix */
-      -webkit-transform: translateX(-100%); /* Browser bug fix */
-      transform: translateX(-100%); 
-    }
-  }
-
-  #but{
-
-    z-index: 999;
-    position: relative;
-    color: #fff;
-    top: -15vh;
-    height: 80vh;
-    width: 96.5%;  
-    overflow-y: scroll;
-    font-size: 1.5rem;
-  }
-
-
-  /*---------------Scroll-------*/
-  .weswap-current
-  {
-    display:inline-block;
-    height:200px;
-    margin:10px 40px;
-    padding:5px;
-    overflow:hidden;
-    overflow-y:scroll;
-    width:200px;
-  }
-
-  .weswap-current::-webkit-scrollbar {
-    width: 7px;
-  }
-
-  .weswap-current::-webkit-scrollbar-track {
-
-    border-radius: 10px;
-  }
-
-  .weswap-current::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    background-color:#ffc72e;
-  }
-
-
-
-
-  /*----------language button----------*/
-
-  .hide {
-    display: none;
-  }
-  button.eng{
-    display:none;
-  }
-  button.hin{
-    display:none;
-
-  }
-
-
-  .flex-contianer {
-    display: flex;
-    justify-content: space-between;
-
-  }
-  #eee{
-    display: inline-block;
-    z-index: 999;
-    color: #f00;
-    position: relative;
-    margin-top: 2.35vh;
-    left: -2.5vh;
-  }
-  .content{
-    padding: 0px 12px;
-  }
-
-  /*----------------Language  button design-----------*/
-  button.button {
-    z-index: 999999999;
-    color: #fff;
-    background: transparent;
-    position: relative;
-    text-align:center;
-    font-size: 2rem;
-    cursor: pointer;
-    border: 1px solid rgba(0,0,0,0.5);
-    border-bottom: 3px solid rgba(0,0,0,0.5);
-    border-radius: 2rem;
-    -moz-border-radius: 2rem;
-    -webkit-border-radius: 2rem;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.5), /* Exterior Shadow */
-    inset 0 1px rgba(255,255,255,0.3), /* Top light Line */
-    inset 0 10px rgba(255,255,255,0.2), /* Top Light Shadow */
-    inset 0 10px 20px rgba(255,255,255,0.25), /* Sides Light Shadow */
-    inset 0 -15px 30px rgba(0,0,0,0.3); /* Dark Background */
-    -webkit-box-shadow: 0 2px 8px rgba(0,0,0,0.5),
-    inset 0 1px rgba(255,255,255,0.3),
-    inset 0 10px rgba(255,255,255,0.2),
-    inset 0 10px 20px rgba(255,255,255,0.25),
-    inset 0 -15px 30px rgba(0,0,0,0.3);
-    -moz-box-shadow: 0 2px 8px rgba(0,0,0,0.5),
-    inset 0 1px rgba(255,255,255,0.3),
-    inset 0 10px rgba(255,255,255,0.2),
-    inset 0 10px 20px rgba(255,255,255,0.25),
-    inset 0 -15px 30px rgba(0,0,0,0.3);
-
-  }
-
-  button.button:hover {
-    opacity: 0.7;
-    text-decoration: none;
-    color: yellow;
-    filter: alpha(opacity=70);
-    -moz-opacity:0.7;
-    -khtml-opacity: 0.7;
-    border-bottom: 0px solid rgba(0,0,0,0.5);
-    border-top: 3px solid rgba(0,0,0,0.5);
-  }
-
-  /*---------------------audio button------------*/
-  /*-----------------audio--------------*/
-  audio {
-    display: none;
-  }
-
-  #butto {
-    z-index: 999999999;
-    color: #fff;
-    background: transparent;
-    position: relative;
-    top: 2.3vh;
-    left: 2.5vh;
-    font-size: 2rem;
-    padding: 10px 15px;
-    opacity: 0.8;
-    cursor: pointer;
-    border: 1px solid rgba(0,0,0,0.5);
-    border-bottom: 3px solid rgba(0,0,0,0.5);
-    border-radius: 3rem;
-    -moz-border-radius: 3rem;
-    -webkit-border-radius: 3rem;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.5), /* Exterior Shadow */
-    inset 0 1px rgba(255,255,255,0.3), /* Top light Line */
-    inset 0 10px rgba(255,255,255,0.2), /* Top Light Shadow */
-    inset 0 10px 20px rgba(255,255,255,0.25), /* Sides Light Shadow */
-    inset 0 -15px 30px rgba(0,0,0,0.3); /* Dark Background */
-    -webkit-box-shadow: 0 2px 8px rgba(0,0,0,0.5),
-    inset 0 1px rgba(255,255,255,0.3),
-    inset 0 10px rgba(255,255,255,0.2),
-    inset 0 10px 20px rgba(255,255,255,0.25),
-    inset 0 -15px 30px rgba(0,0,0,0.3);
-    -moz-box-shadow: 0 2px 8px rgba(0,0,0,0.5),
-    inset 0 1px rgba(255,255,255,0.3),
-    inset 0 10px rgba(255,255,255,0.2),
-    inset 0 10px 20px rgba(255,255,255,0.25),
-    inset 0 -15px 30px rgba(0,0,0,0.3);
-  }
-  #butto:hover{
-    opacity: 0.7;
-    text-decoration: none;
-    color: yellow;
-    filter: alpha(opacity=70);
-    -moz-opacity:0.7;
-    -khtml-opacity: 0.7;
-    border-bottom: 0px solid rgba(0,0,0,0.5);
-    border-top: 3px solid rgba(0,0,0,0.5);
-
-  }
-  button.fade:hover {
-    z-index: 999999999999;
-    opacity: 0.8;
-  }
-
-  .fade {
-    z-index: 999999999999;
-    opacity: 0.6;
-
-  }
-
-  /*---------------------- 425  media quary for audio button and scrool left-----*/ 
-  @media (max-width:425px) {
-    #butto{
-      font-size: 1rem;
-      padding: 4px 8px;
-    }
-
-    .scroll-left {
-      font-size: 1.8rem;
-      width:70%;
-      left:15%;
-      top:2vh;
-      height: 18vh;
-      margin-bottom: 7vh;
-    }
-
-    #but{
-      margin: 2.5% 0% 2.5% 6%;
-      height: 72vh;
-      width: 93.5%;  
-      top: -15vh;
-      overflow-y: scroll;
-      align-items: center;
-      font-size: 1.2rem;
-    }
-
-    /*----------language button----------*/
-
-    #eee{
-      display: inline;
-      z-index: 999;
-      color: #f00;
-      position: relative;
-    }
-
-    .content{
-      padding: 0px 4px;
-    }
-
-    .ed{
-      font-size: 1.2rem;
-      margin-top: 0rem;
-      margin-bottom:-1rem;
-      padding-bottom: -2rem;
-    }
-    .hd{
-      font-size: 1.2rem;
-      margin-top: 0rem;
-      margin-bottom: 0rem;
-      padding-bottom: -2rem;
-    }
-
-
-  }
-
-  /*---------------------- 375 media quary for audio button and scrool left-----*/ 
-
-
-  @media (max-width:375px) {
-    #butto{
-      font-size: 1rem;
-      padding: 4px 8px;
-
-    }
-    .scroll-left {
-      font-size: 1.8rem;
-      width:70%;
-      left:15%;
-      top:2vh;
-      height: 18vh;
-      margin-bottom: 7vh;
-    }
-    #but{
-      margin: 2.5% 0% 2.5% 6%;
-      height: 72vh;
-      width: 93.8%;  
-      top: -15vh;
-      overflow-y: scroll;
-      align-items: center;
-      font-size: 1.2rem;
-    }
-
-
-    /*----------language button----------*/
-
-    #eee{
-      display: inline;
-      z-index: 999;
-      color: #f00;
-      position: relative;
-    }
-
-    .content{
-      padding: 0px 4px;
-    }
-
-    .ed{
-      font-size: 1rem;
-      margin-top: 0rem;
-      margin-bottom:-1rem;
-      padding-bottom: -2rem;
-    }
-    .hd{
-      font-size: 1rem;
-      margin-top: 0rem;
-      margin-bottom: 0rem;
-      padding-bottom: -2rem;
-    }
-
-
-  }
-
+  
 </style>
-<link rel="preload" href="_nuxt/script1.js" as="script">
-<link rel="preload" href="_nuxt/script2.js" as="script">
-<link rel="preload" href="_nuxt/script3.js" as="script">
-<link rel="preload" href="_nuxt/script4.js" as="script">
+<link rel="preload" href="script1.js" as="script">
+<link rel="preload" href="script2.js" as="script">
+<link rel="preload" href="script3.js" as="script">
+<link rel="preload" href="script4.js" as="script">
 
 </head>
 <body>
@@ -620,248 +274,11 @@ html{scrollbar-width:none;-ms-overflow-style:none}.loader{position:fixed;z-index
 
 </div>
 <div data-server-rendered="true" id="__nuxt"><!----><div class="loader"><div class="bgColor"></div> <div class="words"></div></div> 
-
-<script type="text/javascript">
-	
-  //----------------------Audio-------------//
-  const button = document.querySelector("#butto");
-  const icon = document.querySelector("#butto > i");
-  const audio = document.querySelector("audio");
-
-  button.addEventListener("click", () => {
-    if (audio.paused) {
-      audio.volume = 0.2;
-      audio.play();
-      icon.classList.remove('fa-volume-up');
-      icon.classList.add('fa-volume-mute');
-
-
-    } else {
-      audio.pause();
-      icon.classList.remove('fa-volume-mute');
-      icon.classList.add('fa-volume-up');
-    }
-    button.classList.add("fade");
-  });
-//------------------------------------//
-
-
-
-$(document).on('click', '.map-point-sm', function() {
-  var show = $(this).data('show');
-  $(show).removeClass("hide").siblings().addClass("hide");  
-
-
-  $('button.en').on('click',function () {
-    $('button.en').addClass('eng'); 
-    $('button.hi').removeClass('hin');
-
-  //different audio switch
-   document.getElementById("aud").src = "Be_The_One.mp3";
-
-  });
-  $('button.hi').on('click',function () {
-   $('button.en').removeClass('eng');
-   $('button.hi').addClass('hin');  
-  //different audio switch
-
-    document.getElementById("aud").src = "Pranay_Creativity.mp3";
-
- });
-});
-
-(function () {
-  var requestAnimationFrame = window.requestAnimationFrame || window.mozRequestAnimationFrame || window.webkitRequestAnimationFrame || window.msRequestAnimationFrame || function (callback) {
-    window.setTimeout(callback, 1000 / 60);
-  };
-  window.requestAnimationFrame = requestAnimationFrame;
-})();
-
-  // Terrain stuff.
-  var background = document.getElementById("bgCanvas"),
-  bgCtx = background.getContext("2d"),
-  width = window.innerWidth,
-  height = document.body.offsetHeight;
-
-  var x =screen.width;
-
-  if (x<376+"px") {
-   (height < (x+1000) )? height = (x-1000) : height;
- } 
- else {
-
-  (height < (x-300) )? height = (x-300) : height;
-}
-
-background.width = width;
-background.height = height;
-
-function Terrain(options) {
-  options = options || {};
-  this.terrain = document.createElement("canvas");
-  this.terCtx = this.terrain.getContext("2d");
-  this.scrollDelay = options.scrollDelay || 90;
-  this.lastScroll = new Date().getTime();
-
-  this.terrain.width = width;
-  this.terrain.height = height;
-  this.fillStyle = options.fillStyle || "#191D4C";
-  this.mHeight = options.mHeight || height;
-
-      // generate
-      this.points = [];
-
-      var displacement = options.displacement || 140,
-      power = Math.pow(2, Math.ceil(Math.log(width) / (Math.log(2))));
-
-      // set the start height and end height for the terrain
-      this.points[0] = this.mHeight;//(this.mHeight - (Math.random() * this.mHeight / 2)) - displacement;
-      this.points[power] = this.points[0];
-
-      // create the rest of the points
-      for (var i = 1; i < power; i *= 2) {
-        for (var j = (power / i) / 2; j < power; j += power / i) {
-          this.points[j] = ((this.points[j - (power / i) / 2] + this.points[j + (power / i) / 2]) / 2) + Math.floor(Math.random() * -displacement + displacement);
-        }
-        displacement *= 0.6;
-      }
-
-      document.body.appendChild(this.terrain);
-    }
-
-    Terrain.prototype.update = function () {
-      // draw the terrain
-      this.terCtx.clearRect(0, 0, width, height);
-      this.terCtx.fillStyle = this.fillStyle;
-      
-      if (new Date().getTime() > this.lastScroll + this.scrollDelay) {
-        this.lastScroll = new Date().getTime();
-        this.points.push(this.points.shift());
-      }
-
-      this.terCtx.beginPath();
-      for (var i = 0; i <= width; i++) {
-        if (i === 0) {
-          this.terCtx.moveTo(0, this.points[0]);
-        } else if (this.points[i] !== undefined) {
-          this.terCtx.lineTo(i, this.points[i]);
-        }
-      }
-
-      this.terCtx.lineTo(width, this.terrain.height);
-      this.terCtx.lineTo(0, this.terrain.height);
-      this.terCtx.lineTo(0, this.points[0]);
-      this.terCtx.fill();
-    }
-
-
-  // Second canvas used for the stars
-  bgCtx.fillStyle = '#05004c';
-  bgCtx.fillRect(0, 0, width, height);
-
-  // stars
-  function Star(options) {
-    this.size = Math.random() * 2;
-    this.speed = Math.random() * .05;
-    this.x = options.x;
-    this.y = options.y;
-  }
-
-  Star.prototype.reset = function () {
-    this.size = Math.random() * 2;
-    this.speed = Math.random() * .05;
-    this.x = width;
-    this.y = Math.random() * height;
-  }
-
-  Star.prototype.update = function () {
-    this.x -= this.speed;
-    if (this.x < 0) {
-      this.reset();
-    } else {
-      bgCtx.fillRect(this.x, this.y, this.size, this.size);
-    }
-  }
-
-  function ShootingStar() {
-    this.reset();
-  }
-
-  ShootingStar.prototype.reset = function () {
-    this.x = Math.random() * width;
-    this.y = 0;
-    this.len = (Math.random() * 80) + 10;
-    this.speed = (Math.random() * 10) + 6;
-    this.size = (Math.random() * 1) + 0.1;
-      // this is used so the shooting stars arent constant
-      this.waitTime = new Date().getTime() + (Math.random() * 3000) + 500;
-      this.active = false;
-    }
-
-    ShootingStar.prototype.update = function () {
-      if (this.active) {
-        this.x -= this.speed;
-        this.y += this.speed;
-        if (this.x < 0 || this.y >= height) {
-          this.reset();
-        } else {
-          bgCtx.lineWidth = this.size;
-          bgCtx.beginPath();
-          bgCtx.moveTo(this.x, this.y);
-          bgCtx.lineTo(this.x + this.len, this.y - this.len);
-          bgCtx.stroke();
-        }
-      } else {
-        if (this.waitTime < new Date().getTime()) {
-          this.active = true;
-        }
-      }
-    }
-
-    var entities = [];
-
-  // init the stars
-  for (var i = 0; i < height; i++) {
-    entities.push(new Star({
-      x: Math.random() * width,
-      y: Math.random() * height
-    }));
-  }
-
-  // Add 2 shooting stars that just cycle.
-  entities.push(new ShootingStar());
-  entities.push(new ShootingStar());
-  entities.push(new Terrain({mHeight : (height/2)-120}));
-  entities.push(new Terrain({displacement : 120, scrollDelay : 50, fillStyle : "rgb(17,20,40)", mHeight : (height/2)-60}));
-  entities.push(new Terrain({displacement : 100, scrollDelay : 20, fillStyle : "rgb(10,10,5)", mHeight : height/2}));
-
-  //animate background
-  function animate() {
-    bgCtx.fillStyle = '#110E19';
-    bgCtx.fillRect(0, 0, width, height);
-    bgCtx.fillStyle = '#ffffff';
-    bgCtx.strokeStyle = '#ffffff';
-
-    var entLen = entities.length;
-
-    while (entLen--) {
-      entities[entLen].update();
-    }
-    requestAnimationFrame(animate);
-  }
-  animate();
-
-
-
-
-
-
-
-</script>
-<script src="_nuxt/script1.js" defer></script>
-<script src="_nuxt/script2.js" defer></script>
-<script src="_nuxt/script3.js" defer></script>
-<script src="_nuxt/script4.js" defer></script>
+<script src="script.js"></script>
+<script src="script1.js" defer></script>
+<script src="script2.js" defer></script>
+<script src="script3.js" defer></script>
+<script src="script4.js" defer></script>
 </body>
 
 <!-- Mirrored from www.andrewleguay.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 02 Oct 2020 19:17:40 GMT -->
