--- a/Thought/index.html
+++ b/Thought/index.html
@@ -47,17 +47,17 @@
 		<p>SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp </p>
 	</div>
 	<div id="but" class=" weswap-current">
-		<a href="../Vichaar Ya Vishvaas/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Vichaar Ya Vishvaas</a>
+		<a href="./Vichaar Ya Vishvaas/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Vichaar Ya Vishvaas</a>
 
-		<a href="../Tum Chahte Ho Kya/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Tum Chahte Ho Kya?</a>
+		<a href="./Tum Chahte Ho Kya/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Tum Chahte Ho Kya?</a>
 
-		<a href="../The Elephant Rope/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">The Elephant Rope</a> 
+		<a href="./The Elephant Rope/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">The Elephant Rope</a> 
 
-		<a href="../Agar Main Ishwar Hota/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Agar Main Ishwar Hota</a> 
+		<a href="./Agar Main Ishwar Hota/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Agar Main Ishwar Hota</a> 
 
-		<a href="../The Game/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">The GAME</a><br>
+		<a href="./The Game/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">The GAME</a><br>
 
-		<a href="../Existence/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Existence</a> 
+		<a href="./Existence/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Existence</a> 
 
 		<a href="#" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">If only I knew</a>
 		
