--- a/3/mobile/bignav.html
+++ b/3/mobile/bignav.html
@@ -367,7 +367,7 @@ margin-top: -22%;
 
   <h1 class=" port rellax " data-rellax-speed=".5" >Portfolio —</h1> 
 
-  <div class="i-sub-hl rellax" data-rellax-speed="3" >Introduction</div> 
+  <div class="i-sub-hl rellax-non-centered" data-rellax-speed="3" >Introduction</div> 
 
 
 
