--- a/3/mobile/bignav.html
+++ b/3/mobile/bignav.html
@@ -149,7 +149,7 @@
       }
     }
 .intropr{
-  height: 90rem;
+  height: 95rem;
   background-color: #000;
 }
     @media(max-width: 765px) {
@@ -193,6 +193,7 @@
         padding-left: 4.5%;
         font-size: 8.6vw;
         color: #ff0;
+        padding-top: 2.5rem;
        
 
       }
@@ -278,7 +279,7 @@ margin-top: -22%;
   </head>
  
   <body style="overflow-x: hidden; " >
-     <div data-server-rendered="true" id="__nuxt"><!----<div class="loader"><div class="bgColor"></div> <div class="words"></div></div>
+     <div data-server-rendered="true" id="__nuxt"><!----><div class="loader"><div class="bgColor"></div> <div class="words"></div></div>
     </div>
 <!-- Preloader --
 <div class="preloader-wrapper" style="z-index:999999999999999999999999999999999;"id="preloader-wrapper">
@@ -333,15 +334,15 @@ margin-top: -22%;
       <h1><span style="color: #ffe">I'M</span> <span class="typed-text"></span><span class="cursor">&nbsp</span></h1>
       <p class="sub-cursor" ><h5>I am all that is, has been and ever can be having an experience called Pranay Patel.</h5></p>
       <ul class="list-unstyled  list-social" >
-        <li class="icons rellax-non-centered" data-rellax-speed="-4.2"><a href="https://www.linkedin.com/in/pranay-patel-374257148"target="_blank"><i class="fab fa-linkedin icon-col icon-col fa-2x" aria-hidden="true"></i></a></li>
-        <li class="icons rellax-non-centered" data-rellax-speed="-4.15"><a  href="mailto:pranay.pbt17@spt.pdpu.ac.in" target="_blank"><i class="far fa-envelope icon-col fa-2x" aria-hidden="true"></i></a>
+        <li class="icons rellax-non-centered" data-rellax-speed="-2.2"><a href="https://www.linkedin.com/in/pranay-patel-374257148"target="_blank"><i class="fab fa-linkedin icon-col icon-col fa-2x" aria-hidden="true"></i></a></li>
+        <li class="icons rellax-non-centered" data-rellax-speed="-2.15"><a  href="mailto:pranay.pbt17@spt.pdpu.ac.in" target="_blank"><i class="far fa-envelope icon-col fa-2x" aria-hidden="true"></i></a>
         </li>
-        <li class="icons rellax-non-centered" data-rellax-speed="-4.1"><a href="https://wa.me/919773130922" target="_blank"><i class="fab fa-whatsapp icon-col fa-2x" aria-hidden="true" ></i></a>
+        <li class="icons rellax-non-centered" data-rellax-speed="-2.1"><a href="https://wa.me/919773130922" target="_blank"><i class="fab fa-whatsapp icon-col fa-2x" aria-hidden="true" ></i></a>
         </li>
 
-        <li class="icons rellax-non-centered" data-rellax-speed="-4.05"><a href="https://www.instagram.com/pranaynpatel" target="_blank" ><i class="fab fa-instagram icon-col fa-2x"  aria-hidden="true"></i></a>
+        <li class="icons rellax-non-centered" data-rellax-speed="-2.05"><a href="https://www.instagram.com/pranaynpatel" target="_blank" ><i class="fab fa-instagram icon-col fa-2x"  aria-hidden="true"></i></a>
         </li>       
-        <li class="icons rellax-non-centered" data-rellax-speed="-4"><a href="https://github.com/pranaywebsite" target="_blank"><i class="fa fa-github-square icon-col fa-2x" aria-hidden="true" ></i></a>
+        <li class="icons rellax-non-centered" data-rellax-speed="-2"><a href="https://github.com/pranaywebsite" target="_blank"><i class="fa fa-github-square icon-col fa-2x" aria-hidden="true" ></i></a>
         </li>
       </ul>
     </div>
@@ -367,7 +368,7 @@ margin-top: -22%;
 
   <h1 class=" port rellax " data-rellax-speed=".5" >Portfolio —</h1> 
 
-  <div class="i-sub-hl rellax-non-centered" data-rellax-speed="3" >Introduction</div> 
+  <div class="i-sub-hl rellax" data-rellax-speed="3" >Introduction</div> 
 
 
 
