--- a/3/mobile/bignav.html
+++ b/3/mobile/bignav.html
@@ -53,7 +53,7 @@
   </head>
  
   <body style="overflow-x: hidden; " >
-     <div data-server-rendered="true" id="__nuxt"><!--<div class="loader"><div class="bgColor"></div> <div class="words"></div></div>
+     <div data-server-rendered="true" id="__nuxt"><!----><div class="loader"><div class="bgColor"></div> <div class="words"></div></div>
     </div>
 <!-- Preloader --
 <div class="preloader-wrapper" style="z-index:999999999999999999999999999999999;"id="preloader-wrapper">
@@ -149,9 +149,9 @@
   <div class="i-subtext">
 
     <img src="introPranay.png" alt="Andrew Leguay" class="i-bg-pic rellax " data-rellax-speed="-1.5" >
-    <p class="i-text-left rellax " data-rellax-speed="1.75" >My name is Pranay Patel; I am a curious petroleum engineering student currently in the fourth year of B.Tech at Pandit Deendayal Petroleum University and currently, I am serving as Chief Operating Officer at FIPI PDPU Students Chapter where we bridge the gap between industry and academia by organizing highly interactive events for the students at PDPU to share, acquire and harvest their knowledge. </p> 
+    <p class="i-text-left rellax " data-rellax-speed="1.75" >My name is Pranay Patel; I am a curious petroleum engineering student currently in the fourth year of B.Tech at Pandit Deendayal Petroleum University and currently, I am serving as<span style="text-decoration: underline;"> Chief Operating Officer at FIPI PDPU Students Chapter</span> where we bridge the gap between industry and academia by organizing highly interactive events for the students at PDPU to share, acquire and harvest their knowledge. </p> 
     <p class="i-text-right rellax " data-rellax-speed=".75" >And I aspire to work in the energy sector especially in the field which would allow me to meet new people, letting me know their culture, and inspire me to work hard for the betterment of the society.<br>
-    Here is a link to Satyalekhan another website that I built for the satirical poems which I love to write.</p>
+    Here is a link to <span style="text-decoration: underline;"><a href="https://pranaywebsite.github.io/Satyalekhan/" target="_blank" style="color: #f00;">Satyalekhan</a></span> another website that I built for the satirical poems which I love to write.</p>
 
   </div>
  <div class="d-flex justify-content-center rellax res" data-rellax-speed="6.5">
@@ -411,11 +411,11 @@
               </div>
               <br/>
 
-              <input name="skip_Submit" class="text-size submit-cent  d-flex justify-content-center"  type="submit" value="Submit" />
+              <input name="skip_Submit" class="text-size submit-cent  d-flex justify-content-center"  type="submit" value="Submit"/>
 
             </form>
 
-            <h3 class="head">GET IN TOUCH</h3>
+            <h3 class="head rellax" data-rellax-speed="-1" >GET IN TOUCH</h3>
             <div class="media">
              <ul>
               <li><a href="https://www.linkedin.com/in/pranay-patel-374257148"target="_blank"><i class="fab fa-linkedin " id="press-icons" aria-hidden="true"></i></a></li>
@@ -439,7 +439,7 @@
 
 
               <section>
-               <footer class="footer-distributed  footer-left">
+               <footer class="footer-distributed  footer-left ">
 
                 <p class="created">Created by Pranay Patel  &copy; 2020</p>
 
