--- a/3/mobile/bignav.html
+++ b/3/mobile/bignav.html
@@ -53,7 +53,7 @@
   </head>
  
   <body style="overflow-x: hidden; " >
-     <div data-server-rendered="true" id="__nuxt"><!--<div class="loader"><div class="bgColor"></div> <div class="words"></div></div>
+     <div data-server-rendered="true" id="__nuxt"><!----><div class="loader"><div class="bgColor"></div> <div class="words"></div></div>
     </div>
 <!-- Preloader --
 <div class="preloader-wrapper" style="z-index:999999999999999999999999999999999;"id="preloader-wrapper">
