--- a/mobile/contact/index.html
+++ b/mobile/contact/index.html
@@ -12,7 +12,7 @@
 </head>
 <body id="ui-canvas" style="margin: 0;">
 <div style=" position: relative; width: 100%; height: 100%;">
-<div id="container-id-0-" data-element-type="container"><p id="text-id-1-" data-element-type="text" >Thank You</p></div><button id="button-id-2-" data-element-type="button"><a href="https://pranaywebsite.github.io/sample/6/bignav.html" style="text-decoration: none;color: #f00;"><span >Back To Portfolio</span></a></button><div id="container-id-5-" data-element-type="container"></div>
+<div id="container-id-0-" data-element-type="container"><p id="text-id-1-" data-element-type="text" >Thank You</p></div><a href="https://pranaywebsite.github.io/sample/mobile/index.html" style="text-decoration: none;color: #f00;"><button id="button-id-2-" data-element-type="button"><span >Back To Portfolio</span></button></a><div id="container-id-5-" data-element-type="container"></div>
 </div>
 
 </body>
