--- a/mobile/index.html
+++ b/mobile/index.html
@@ -349,14 +349,14 @@
     <form action="https://www.SnapHost.com/captcha/send.aspx" id="ContactUsCaptchaWebForm" method="post" onsubmit="return ValidateForm(this);" target="_top" class="cform">
 
 <!----------input your Email to recive inf0---------->
-      <input name="skip_WhereToSend" type="hidden" value="prany95581@gmail.com"/>
+      <input name="skip_WhereToSend" type="hidden" value="pranupatu@gmail.com"/>
 
       <input name="skip_SnapHostID" type="hidden" value="G4LCNEXSZ3FM"/>
 
 
 
 <!-----------give the thanks website address--------->
-      <input name="skip_WhereToReturn" type="hidden" value="https://pranaywebsite.github.io/sample/mobile/contact/index.html"/>
+      <input name="skip_WhereToReturn" type="hidden" value="https://pranaywebsite.github.io/sample/mobile/contact/index.html" />
 
 
 
