--- a/5/mobile/index.html
+++ b/5/mobile/index.html
@@ -145,7 +145,7 @@
       <h2 style="color: #fff;">Skills</h2></div>
 <br>
 
- <a href="certification/index.html" target="_blank"><h6 data-text="certification "class=" rellax-non-centered" data-rellax-speed="-.55" style="z-index: 1; text-decoration: none;" > certification</h6></a>
+ <a href="certification/index.html" target="_blank" style="text-decoration: none;"><h6 data-text="certification "class=" rellax certi" data-rellax-speed="-2" style="z-index: 1; text-decoration: none;" > certification</h6></a>
 
 <div class='tableicon'><div/>
       <div class="card-carousel rellax-non-centered" data-rellax-speed="1">
